# pypielm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: compare_devices.py  compare_numpy_torch.py  device_utils.py  perf_profile.py  stats_analysis.py  sweep_hidden_dim.py  sweep_solver.py
docs/: changelog.md  conf.py  contributing.md  index.rst  installation.md  quickstart.md
docs/api/: core.rst  data.rst  io.rst  metrics.rst  models.rst  pde.rst  pypielm.rst  utils.rst  visualization.rst
docs/tutorials/: heat_2d.md  inverse_problem.md  poisson_1d.md  yaml_cli.md
examples/: benchmark_comparison.ipynb  burgers_1d.py  from_csv.py  heat_2d.py  poisson_1d.ipynb  poisson_1d.py
publication/figures/: fig1_architecture.py  fig2_poisson1d.py  fig3_sweep_hidden_dim.py  fig4_speedup_cuda.py  fig5_cd_diagram.py  fig6_heatmap.py
pypielm/: __init__.py  __main__.py
pypielm/core/: __init__.py  base.py  feature_maps.py  solver.py
pypielm/data/: __init__.py  dataset.py  transforms.py
pypielm/data/adapters/: __init__.py  csv_adapter.py  npz_adapter.py  pdebench_adapter.py  pinnacle_adapter.py  torch_adapter.py
pypielm/io/: __init__.py  checkpoint.py  export.py
pypielm/metrics/: __init__.py  metrics.py
pypielm/models/: __init__.py  bayesian.py  constrained.py  curriculum.py  domain.py  fourier.py  pinn.py  registry.py  vanilla.py
pypielm/pde/: __init__.py  collocation.py  constraints.py  operators.py
pypielm/utils/: __init__.py  config.py  reproducibility.py
pypielm/visualization/: __init__.py  plots.py
tests/: conftest.py  test_bayesian_pielm.py  test_config.py  test_constrained_pielm.py  test_coverage_boost.py  test_curriculum_pielm.py  test_data_adapters.py  test_domain_decomp.py  test_feature_maps.py  test_fourier_pielm.py  test_io.py  test_metrics.py  test_pde_operators.py  test_pinn.py  test_pinnacle_adapter_extended.py  test_property_based.py  test_regression.py  test_reproducibility.py  test_solvers.py  test_vanilla_pielm.py  test_visualization.py
